tercera version, snake mejorado board tambien, y añadido algunos componentes + main para pruebas